--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             height: auto; /* Set height to auto initially */
         }
 
+.reason {
+    text-align: left;
+}
         /* Box styles */
         .box {
             position: absolute;
@@ -210,7 +213,7 @@
 }
 
 @keyframes scrollText {
-    0% { transform: translateX(35%); } /* Start off screen to the right */
+    0% { transform: translateX(30%); } /* Start off screen to the right */
     100% { transform: translateX(-100%); } /* Scroll off screen to the left */
 }
 
@@ -313,6 +316,7 @@
                 liveTrainList.innerHTML = "<li>No live train services available.</li>";
             } else {
 // Generate and append live train service list items
+// Generate and append live train service list items
 await Promise.all(trainServices.map(async (service) => {
     const listItem = document.createElement('li');
     const destination = service.destination[0].locationName;
@@ -324,43 +328,51 @@ await Promise.all(trainServices.map(async (service) => {
     const nrccMessages = data.nrccMessages;
     const nrccMessageContainer = document.querySelector('.nrccMessage');
 
-    // Display NRCC message
-    if (nrccMessages && nrccMessages.length > 0) {
-        const nrccMessage = nrccMessages[0].xhtmlMessage;
-        nrccMessageContainer.innerHTML = nrccMessage;
-    } else {
-        nrccMessageContainer.innerHTML = "If you see something that looks suspicious, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.";
-    }
+// Display NRCC message
+if (nrccMessages && nrccMessages.length > 0) {
+    let nrccMessage = nrccMessages[0].xhtmlMessage;
+
+    // Replace the specified pattern and the link with 'at nationalrail.co.uk/disruption'
+    nrccMessage = nrccMessage.replace(/in <a href="[^"]+">(.*?)<\/a>/g, 'at nationalrail.co.uk/disruption');
+
+    // Remove '/">Latest Travel News'
+    nrccMessage = nrccMessage.replace(/\/\">Latest Travel News\./g, '');
+
+    nrccMessageContainer.innerHTML = nrccMessage;
+} else {
+    nrccMessageContainer.innerHTML = "If you see something that looks suspicious, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.";
+}
 
     // Extracting time from std and etd fields
     const std = service.std ? formatDepartureTime(service.std) : '-';
     const atd = service.atd ? formatDepartureTime(service.atd) : '-';
     const etd = service.etd ? formatDepartureTime(service.etd) : '-';
 
-   // Determine status based on cancellation status and ATD vs STD
-let status;
-let color; // Variable to store text color
-if (service.isCancelled) {
-    status = 'Cancelled';
-    color = '#FF4713'; // Set text color to orange for Cancelled status
-    reason = await getCancelReason(service.cancelReason); // Await the result of getCancelReason
-} else if (etd === '00:00') {
-    status = 'Delayed';
-    color = 'white'; // Set text color to white for Delayed status
-    reason = await getDelayReason(service.delayReason); // Await the result of getDelayReason
-} else if (std === etd || atd > std) {
-    status = 'On Time';
-    color = 'white'; // Set text color to white for On Time status
-} else {
-    status = etd;
-    color = 'white'; // Set text color to white for other statuses
-}
+    // Determine status based on cancellation status and ATD vs STD
+    let status;
+    let color; // Variable to store text color
+    if (service.isCancelled) {
+        status = 'Cancelled';
+        color = '#FF4713'; // Set text color to orange for Cancelled status
+        reason = await getCancelReason(service.cancelReason); // Await the result of getCancelReason
+    } else if (etd === '00:00') {
+        status = 'Delayed';
+        color = 'white'; // Set text color to white for Delayed status
+        reason = await getDelayReason(service.delayReason); // Await the result of getDelayReason
+    } else if (std === etd || atd > std) {
+        status = 'On Time';
+        color = 'white'; // Set text color to white for On Time status
+    } else {
+        status = etd;
+        color = 'white'; // Set text color to white for other statuses
+    }
 
     // Assign the reason to the operator text box
     const operatorElement = document.createElement('div');
     operatorElement.classList.add('operator');
     operatorElement.textContent = reason ? reason : (operator === '-' ? 'Compensation may apply' : operator);
 
+    // Create the list item HTML
     listItem.innerHTML = `
         <div class="std">${std}</div>
         <div class="destination">${destination}</div>
@@ -372,6 +384,7 @@ if (service.isCancelled) {
     // Append the operator element to the list item
     listItem.appendChild(operatorElement);
 
+    // Append the list item to the live train list
     liveTrainList.appendChild(listItem);
 }));
                 // Show the station name once the user chooses a station, only if it's not already shown
@@ -399,12 +412,16 @@ if (service.isCancelled) {
     function formatDepartureTime(timeString) {
         return timeString.slice(11, 16);
     }
-async function getDelayReason(reasonCode) {
+
+
+async function getDelayReason(reasonObj) {
     try {
-        if (!reasonCode) {
-            console.error('Invalid delay reason code:', reasonCode);
-            return '';
+        if (!reasonObj || typeof reasonObj !== 'object' || !('value' in reasonObj)) {
+            console.error('Invalid delay reason object:', reasonObj);
+            return ''; // Return empty string if reasonObj is null or invalid
         }
+
+        const reasonCode = reasonObj.value;
 
         const response = await fetch('https://raw.githubusercontent.com/davwheat/raildotmatrix.co.uk/main/src/api/LatenessCodes.json');
         if (!response.ok) {
@@ -417,7 +434,7 @@ async function getDelayReason(reasonCode) {
         const reasonText = reasons.hasOwnProperty(reasonCode) ? reasons[reasonCode] : '';
         const modifiedReasonText = reasonText.replace('This train has been delayed because of', 'Due to');
 
-        console.log('Delay Reason for code ' + reasonCode + ':', modifiedReasonText); // Output the modified delay reason to the console
+        console.log('Delay Reason for code ' + reasonCode + ':', modifiedReasonText); // Output the delay reason to the console
         return modifiedReasonText;
     } catch (error) {
         console.error('Error fetching delay reasons:', error);
