--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
             overflow: hidden;
             background-color: #141d2c; /* Background color of the whole page */
         }
+        .made-by {
+    position: absolute;
+    top: 10;
+    right: 165;
+    font-family: Averta;
+    font-size: 20px;
+    color: #828282;
+}
+
+.not-replacement {
+    position: absolute;
+    top: 35px;
+    right: 10;
+    font-family: Averta;
+    font-size: 20px;
+    color: #828282;
+}
 
         /* Iframe container */
         .iframe-container {
@@ -258,6 +275,9 @@
 <body>
 
     <div class="red-box"></div>
+    <div class="made-by">Made by Michael</div>
+    <div class="not-replacement">Not a substitute for real-time info.</div>
+
 
     <!-- Text boxes -->
     <div class="text-box">Departures</div>
@@ -302,209 +322,121 @@
     </div>
 
 <script>
-    async function fetchAndDisplayLiveTrainServices(station) {
-        try {
-            const response = await fetch(`https://national-rail-api.davwheat.dev/staffdepartures/${station}?expand=true`);
-            const data = await response.json();
-            const trainServices = data.trainServices;
+// Fetch and display live train services based on user input
+async function fetchLiveTrainServices() {
+    const stationInput = document.getElementById('station').value;
+    if (stationInput) {
+        await fetchAndDisplayLiveTrainServices(stationInput);
+        setInterval(() => fetchAndDisplayLiveTrainServices(stationInput), 15000); // Update every 10 minutes
+        document.getElementById('stationSelection').classList.add('hide'); // Hide station selection
+        updateClock(); // Start the clock
+    } else {
+        console.error('Please select a station.');
+    }
+}
 
-            const liveTrainList = document.getElementById('liveTrainList');
-            liveTrainList.innerHTML = ''; // Clear existing data
+// Function to fetch live train services and display them
+async function fetchAndDisplayLiveTrainServices(station) {
+    try {
+        const response = await fetch(`https://national-rail-api.davwheat.dev/staffdepartures/${station}?expand=true`);
+        const data = await response.json();
+        const trainServices = data.trainServices;
 
-            if (trainServices.length === 0) {
-                // If no live train services available
-                liveTrainList.innerHTML = "<li>No live train services available.</li>";
-            } else {
-// Generate and append live train service list items
-// Generate and append live train service list items
-await Promise.all(trainServices.map(async (service) => {
+        // Fetch delay and cancellation reasons for all services concurrently
+        const delayReasonPromises = trainServices.map(service => getDelayReason(service.delayReason));
+        const cancelReasonPromises = trainServices.map(service => getCancelReason(service.cancelReason));
+        const delayReasons = await Promise.all(delayReasonPromises);
+        const cancelReasons = await Promise.all(cancelReasonPromises);
+
+        // Assign delay and cancellation reasons to train services
+        trainServices.forEach((service, index) => {
+            service.delayReason = delayReasons[index];
+            service.cancelReason = cancelReasons[index];
+        });
+
+        // Sort train services based on scheduled departure time (std)
+        trainServices.sort((a, b) => {
+            const stdA = a.std ? a.std : '00:00';
+            const stdB = b.std ? b.std : '00:00';
+            return stdA.localeCompare(stdB);
+        });
+
+        // Display sorted live train services
+        displayLiveTrainServices(trainServices);
+    } catch (error) {
+        console.error('Error fetching and displaying live train services:', error);
+    }
+}
+
+// Function to display live train services
+function displayLiveTrainServices(trainServices) {
+    const liveTrainList = document.getElementById('liveTrainList');
+    liveTrainList.innerHTML = ''; // Clear existing data
+
+    if (trainServices.length === 0) {
+        // If no live train services available
+        liveTrainList.innerHTML = "<li>No live train services available.</li>";
+    } else {
+        trainServices.forEach(service => {
+            const listItem = createListItem(service);
+            liveTrainList.appendChild(listItem);
+        });
+    }
+}
+
+// Create list item for a train service
+function createListItem(service) {
+    // Construct list item HTML
     const listItem = document.createElement('li');
     const destination = service.destination[0].locationName;
     const platform = service.platform || '-';
     const operator = service.operator ? service.operator : '-';
-    let reason = '';
-
-    // Fetch nrccMessages data
-    const nrccMessages = data.nrccMessages;
-    const nrccMessageContainer = document.querySelector('.nrccMessage');
-
-// Display NRCC message
-if (nrccMessages && nrccMessages.length > 0) {
-    let nrccMessage = nrccMessages[0].xhtmlMessage;
-
-    // Replace the specified pattern and the link with 'at nationalrail.co.uk/disruption'
-    nrccMessage = nrccMessage.replace(/in <a href="[^"]+">(.*?)<\/a>/g, 'at nationalrail.co.uk/disruption');
-
-    // Remove '/">Latest Travel News'
-    nrccMessage = nrccMessage.replace(/\/\">Latest Travel News\./g, '');
-
-    nrccMessageContainer.innerHTML = nrccMessage;
-} else {
-    nrccMessageContainer.innerHTML = "If you see something that looks suspicious, speak to station staff or text the British Transport Police on 61016. See it - Say it - Sorted.";
-}
-
-    // Extracting time from std and etd fields
     const std = service.std ? formatDepartureTime(service.std) : '-';
-    const atd = service.atd ? formatDepartureTime(service.atd) : '-';
     const etd = service.etd ? formatDepartureTime(service.etd) : '-';
+    const status = getStatus(service);
+    const color = getStatusColor(service);
 
-    // Determine status based on cancellation status and ATD vs STD
-    let status;
-    let color; // Variable to store text color
-    if (service.isCancelled) {
-        status = 'Cancelled';
-        color = '#FF4713'; // Set text color to orange for Cancelled status
-        reason = await getCancelReason(service.cancelReason); // Await the result of getCancelReason
-    } else if (etd === '00:00') {
-        status = 'Delayed';
-        color = 'white'; // Set text color to white for Delayed status
-        reason = await getDelayReason(service.delayReason); // Await the result of getDelayReason
-    } else if (std === etd || atd > std) {
-        status = 'On Time';
-        color = 'white'; // Set text color to white for On Time status
-    } else {
-        status = etd;
-        color = 'white'; // Set text color to white for other statuses
-    }
-
-    // Assign the reason to the operator text box
-    const operatorElement = document.createElement('div');
-    operatorElement.classList.add('operator');
-    operatorElement.textContent = reason ? reason : (operator === '-' ? 'Compensation may apply' : operator);
-
-    // Create the list item HTML
     listItem.innerHTML = `
         <div class="std">${std}</div>
         <div class="destination">${destination}</div>
         <div class="platform">${platform}</div>
         <div class="status" style="color: ${color};">${status}</div>
-        <div class="reason">${operator === '-' ? reason : ''}</div>
+        <div class="reason">${service.isCancelled ? service.cancelReason : service.delayReason}</div>
     `;
 
-    // Append the operator element to the list item
-    listItem.appendChild(operatorElement);
+    return listItem;
+}
 
-    // Append the list item to the live train list
-    liveTrainList.appendChild(listItem);
-}));
-                // Show the station name once the user chooses a station, only if it's not already shown
-                const stationNameBox = document.getElementById('stationNameBox');
-                if (!stationNameBox) {
-                    const stationNameBox = document.createElement('div');
-                    stationNameBox.id = 'stationNameBox';
-                    stationNameBox.classList.add('text-box');
-                    stationNameBox.style.left = '460px'; // Move it to the left by 10 pixels
-                    stationNameBox.style.top = '35px'; // Maintain the top position
-                    stationNameBox.style.fontFamily = 'Averta, sans-serif'; // Use Thin Averta font
-                    stationNameBox.style.fontSize = '35px'; // Text size
-                    stationNameBox.style.color = 'white'; // Text color
-                    stationNameBox.style.height = 'auto'; // Set height to auto initially
-                    stationNameBox.textContent = `(from ${data.locationName})`; // Station name in brackets
-                    document.body.appendChild(stationNameBox);
-                }
-            }
-        } catch (error) {
-            console.error('Error fetching live train services:', error);
-        }
-    }
-
-    // Function to format departure time
-    function formatDepartureTime(timeString) {
-        return timeString.slice(11, 16);
-    }
-
-
-async function getDelayReason(reasonObj) {
-    try {
-        if (!reasonObj || typeof reasonObj !== 'object' || !('value' in reasonObj)) {
-            console.error('Invalid delay reason object:', reasonObj);
-            return ''; // Return empty string if reasonObj is null or invalid
-        }
-
-        const reasonCode = reasonObj.value;
-
-        const response = await fetch('https://raw.githubusercontent.com/davwheat/raildotmatrix.co.uk/main/src/api/LatenessCodes.json');
-        if (!response.ok) {
-            throw new Error('Failed to fetch delay reasons');
-        }
-        const reasons = await response.json();
-        console.log('Delay Reasons:', reasons); // Log the reasons object
-
-        // Check if the reason code exists in the reasons object
-        const reasonText = reasons.hasOwnProperty(reasonCode) ? reasons[reasonCode] : '';
-        const modifiedReasonText = reasonText.replace('This train has been delayed because of', 'Due to');
-
-        console.log('Delay Reason for code ' + reasonCode + ':', modifiedReasonText); // Output the delay reason to the console
-        return modifiedReasonText;
-    } catch (error) {
-        console.error('Error fetching delay reasons:', error);
-        return '';
+// Function to get status of a train service
+function getStatus(service) {
+    if (service.isCancelled) {
+        return 'Cancelled';
+    } else if (service.etd === '00:00') {
+        return 'Delayed';
+    } else {
+        return service.etd ? formatDepartureTime(service.etd) : 'On Time';
     }
 }
 
-
-async function getCancelReason(reasonObj) {
-    try {
-        if (!reasonObj || typeof reasonObj !== 'object' || !('value' in reasonObj)) {
-            console.error('Invalid cancellation reason object:', reasonObj);
-            return '';
-        }
-
-        const reasonCode = reasonObj.value;
-
-        const response = await fetch('https://raw.githubusercontent.com/davwheat/raildotmatrix.co.uk/main/src/api/CancellationCodes.json');
-        if (!response.ok) {
-            throw new Error('Failed to fetch cancellation reasons');
-        }
-        const reasons = await response.json();
-        console.log('Cancellation Reasons:', reasons); // Log the reasons object
-
-        // Check if the reason code exists in the reasons object
-        const reasonText = reasons.hasOwnProperty(reasonCode) ? reasons[reasonCode] : '';
-        const modifiedReasonText = reasonText.replace('This train has been cancelled because of', 'Due to');
-
-        console.log('Cancellation Reason for code ' + reasonCode + ':', modifiedReasonText); // Output the cancellation reason to the console
-        return modifiedReasonText;
-    } catch (error) {
-        console.error('Error fetching cancellation reasons:', error);
-        return '';
+// Function to get color for status of a train service
+function getStatusColor(service) {
+    if (service.isCancelled) {
+        return '#FF4713'; // Orange for Cancelled
+    } else {
+        return 'white'; // White for others
     }
 }
 
-    // Function to fetch live train services based on user input
-    async function fetchLiveTrainServices() {
-        const stationInput = document.getElementById('station').value;
-        if (stationInput) {
-            await fetchAndDisplayLiveTrainServices(stationInput);
-            setInterval(() => fetchAndDisplayLiveTrainServices(stationInput), 15000); // Update every 10 minutes
-            document.getElementById('stationSelection').classList.add('hide'); // Hide station selection
-            updateClock(); // Start the clock
-        } else {
-            console.error('Please select a station.');
-        }
-    }
+// Initial call to update the clock
+updateClock();
 
-    // Update the clock every second
-    function updateClock() {
-        const now = new Date();
-        const hours = String(now.getHours()).padStart(2, '0');
-        const minutes = String(now.getMinutes()).padStart(2, '0');
-        const seconds = String(now.getSeconds()).padStart(2, '0');
-        const timeString = `${hours}:${minutes}:${seconds}`;
-        document.querySelector('.clock').textContent = timeString;
-    }
+// Set interval to update the clock every second
+setInterval(updateClock, 1000);
 
-    // Initial call to update the clock
-    updateClock();
-
-    // Set interval to update the clock every second
-    setInterval(updateClock, 1000);
-
-    // Fetch and display live train services initially and then every minute
-    window.onload = function() {
-        // Initially show station selection
-        document.getElementById('stationSelection').classList.remove('hide');
-    };
+// Initially show station selection
+window.onload = function() {
+    document.getElementById('stationSelection').classList.remove('hide');
+};
 </script>
 
 </body>
